Hot product section

--- a/index.html
+++ b/index.html
@@ -106,7 +106,36 @@
                 <label for="slider5"></label>
             </div>
         </div>
+        <div class="products container">
+            <div class="product-hot product-1">
+                <div class="product__image">
+                    <img src="./assets/vintage-chair.png" alt="vintage-chair">
+                </div>
+                <div class="product__title">
+                    <h3 class="h1">INY VINTAGE CHAIR</h3>
+                    <a href="#">
+                        <div class="button">view details</div>
+                    </a>
+                </div>
+            </div>
+            <div class="product-hot product-2">
+                <div class="product__image">
+                    <img src="./assets/large-vase.png" alt="large-vase">
+                </div>
+                <div class="product__title">
+                    <h3 class="h1">LARGE TERRACOTA VASE</h3>
+                    <a href="#">
+                        <div class="button">view details</div>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="collections container">
+            <div class="collection decor">
 
-    </div>
-</body>
+            </div>
+
+        </div>
+
+    </body>
 </html>
