fix font size of mobile logo

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </a>
             </div>
             <div class="mobile-logo">
-                <h2 class="h1">URBAN OUTFITTERS</h2>
+                <h2>URBAN OUTFITTERS</h2>
             </div>
         </div>
         <div class="hero-section">
